# weblog-threat-hunter

./: .gitignore  Makefile  README.md  config.sample.yaml  enhancedMakefile  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
reports/: example.md
src/weblog_threat_hunter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/webloghunter/: cli.py  config.py  detectors.py  enrich.py  parser.py  report.py  report_html.py  stats.py  timebucket.py
tests/: test_parser.py  test_rate_window.py
tools/: snap_report.sh
workflows/: python-ci.yml
