[project]
name = "weblog-threat-hunter"
version = "0.1.0"
description = "Parse Apache logs and flag common attacker behaviors with a clean report."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Lauren Roberts"}]
license = { file = "LICENSE" }
keywords = ["security", "logs", "apache", "nginx", "threat-hunting", "blue-team"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "Topic :: Security",
  "Topic :: System :: Logging",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

# Runtime dependencies (keep minimal)
dependencies = [
  "pydantic>=2.7",
  "pyyaml>=6.0.1",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "black>=24.3",
  "mypy>=1.10",
  "types-PyYAML>=6.0.12",
]

[project.scripts]
webloghunter = "webloghunter.cli:main"

[project.urls]
Homepage = "https://github.com/USERNAME/web-log-threat-hunter"
Repository = "https://github.com/USERNAME/web-log-threat-hunter"
Issues = "https://github.com/USERNAME/web-log-threat-hunter/issues"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
